fixed spell bug in h2 innerText.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h2>JS中的继承总结</h2>
-<h6>If you understand all in this page, it's enought on exentends in js!</h6>
+<h6>If you understand all in this page, it's enought on extends in js!</h6>
 <iframe frameborder=0 width=38% height=768px scrolling=no src=20170708105104/index.html></iframe>
 <iframe frameborder=0 width=24% height=768px scrolling=no src=20170708105204/index.html></iframe>
 <iframe frameborder=0  width=26% height=768px scrolling=no src=20170708105303/index.html></iframe>
